--- a/core/pom.xml
+++ b/core/pom.xml
@@ -76,6 +76,18 @@
             <artifactId>webbit-rest</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+            <version>5.0.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.equinox.http</groupId>
+            <artifactId>servlet</artifactId>
+            <version>1.0.0-v20070606</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
